fix: Fixed getFirst() resolution issue and extracted getProduct method